c_cpp_includes/dtwainx.h

DTWAIN_CALLBACK_PROC DLLENTRY_DEF DTWAIN_GetCallback(VOID_PROTOTYPE);
DTWAIN_CALLBACK_PROC64 DLLENTRY_DEF DTWAIN_GetCallback64(VOID_PROTOTYPE);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumSources(LPDTWAIN_ARRAY lpArray);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumSupportedCaps(DTWAIN_SOURCE Source,LPDTWAIN_ARRAY pArray );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_EnumSupportedCapsEx(DTWAIN_SOURCE Source);
LONG           DLLENTRY_DEF      DTWAIN_GetCapArrayType(DTWAIN_SOURCE Source, LONG nCap);
LONG           DLLENTRY_DEF      DTWAIN_GetCapDataType(DTWAIN_SOURCE Source, LONG nCap);
LONG           DLLENTRY_DEF      DTWAIN_GetCapContainerEx(LONG nCap,DTWAIN_BOOL bSetContainer,LPDTWAIN_ARRAY ConTypes);
LONG           DLLENTRY_DEF      DTWAIN_GetCapContainer(DTWAIN_SOURCE Source, LONG nCap,LONG lCapType);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_GetAcquireArea(DTWAIN_SOURCE Source,LONG lGetType,LPDTWAIN_ARRAY FloatEnum);
/* DTWAIN Frame functions */
DTWAIN_FRAME   DLLENTRY_DEF      DTWAIN_FrameCreate(DTWAIN_FLOAT Left, DTWAIN_FLOAT Top, DTWAIN_FLOAT Right,DTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameDestroy(DTWAIN_FRAME Frame);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameSetAll(DTWAIN_FRAME Frame,DTWAIN_FLOAT Left,DTWAIN_FLOAT Top, DTWAIN_FLOAT Right,DTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameGetAll(DTWAIN_FRAME Frame,LPDTWAIN_FLOAT Left,LPDTWAIN_FLOAT Top, LPDTWAIN_FLOAT Right,LPDTWAIN_FLOAT Bottom);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameGetValue(DTWAIN_FRAME Frame, LONG nWhich, LPDTWAIN_FLOAT Value);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameSetValue(DTWAIN_FRAME Frame, LONG nWhich, DTWAIN_FLOAT Value);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_FrameIsValid(DTWAIN_FRAME Frame);
HANDLE         DLLENTRY_DEF      DTWAIN_GetAcquiredImage(DTWAIN_ARRAY aAcq, LONG nWhichAcq, LONG nWhichDib );
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_GetAcquiredImageArray(DTWAIN_ARRAY aAcq, LONG nWhichAcq);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_EnumSourceUnits(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY lpArray);
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_GetBrightness(DTWAIN_SOURCE Source,LPDTWAIN_FLOAT Brightness);
LONG                 DLLENTRY_DEF    DTWAIN_EnumResolutionValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
/* Imprinter / Endorser functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumPrinterStringModes(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumTwainPrinters(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY lpAvailPrinters);
DTWAIN_BOOL    DLLENTRY_DEF       DTWAIN_FeedPage(DTWAIN_SOURCE Source);
 
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumOrientations(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumPaperSizes(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBitDepth(DTWAIN_SOURCE Source, LPLONG BitDepth, DTWAIN_BOOL bCurrent);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumPixelTypes(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireArea2(DTWAIN_SOURCE Source, LPDTWAIN_FLOAT left, LPDTWAIN_FLOAT top,LPDTWAIN_FLOAT right, LPDTWAIN_FLOAT bottom, LPLONG lpUnit);
/*******************************************************************/

/* Functions to control the strip size of buffered transfer. */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireStripSizes(DTWAIN_SOURCE Source, LPDWORD lpMin, LPDWORD lpMax, LPDWORD lpPreferred);
HANDLE      DLLENTRY_DEF DTWAIN_GetAcquireStripBuffer(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAcquireStripData(DTWAIN_SOURCE Source, LPLONG lpCompression, LPDWORD lpBytesPerRow, LPDWORD lpColumns, LPDWORD lpRows, LPDWORD XOffset,LPDWORD YOffset, LPDWORD lpBytesWritten);
/* Uninitializes the Extended Inmage information interface.  This also must be called  */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FreeExtImageInfo(DTWAIN_SOURCE Source);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FlushAcquiredPages(DTWAIN_SOURCE Source);
/*************************************************************************************/
/* Miscellaneous DIB functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_FlipBitmap(HANDLE hDib );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumTopCameras(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY Cameras);
LONG DLLENTRY_DEF DTWAIN_GetBlankPageAutoDetection(DTWAIN_SOURCE Source);
/* CAP_ALARMVOLUME */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetAlarmVolume(DTWAIN_SOURCE Source, LPLONG lpVolume);
/* CAP_BATTERYMINUTES */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBatteryMinutes(DTWAIN_SOURCE Source, LPLONG lpMinutes );
/* CAP_BATTERYPERCENTAGE */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_GetBatteryPercent(DTWAIN_SOURCE Source, LPLONG lpPercent );
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumOverscanValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
/* ICAP_NOISEFILTERS */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumNoiseFilters(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray);
LONG                 DLLENTRY_DEF    DTWAIN_EnumThresholdValues(DTWAIN_SOURCE Source, LPDTWAIN_ARRAY pArray, DTWAIN_BOOL bExpandIfRange);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumOCRInterfaces(LPDTWAIN_ARRAY OCRInterfaces);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_EnumOCRSupportedCaps(DTWAIN_OCRENGINE Engine,LPDTWAIN_ARRAY SupportedCaps);