language_bindings/Delphi/dtwain64u.pas

  function DTWAIN_EnumNoiseFilters(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumNoiseFilters';
  function DTWAIN_EnumOCRInterfaces(OCRInterfaces:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumOCRInterfaces';
  function DTWAIN_EnumOCRSupportedCaps(Engine:DTWAIN_OCRENGINE;SupportedCaps:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumOCRSupportedCaps';
  function DTWAIN_EnumOrientations(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumOrientations';
  function DTWAIN_EnumOverscanValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumOverscanValues';
  function DTWAIN_EnumPaperSizes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPaperSizes';
  function DTWAIN_EnumPatchMaxPriorities(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPatchMaxPriorities';
  function DTWAIN_EnumPatchMaxRetries(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPatchMaxRetries';
  function DTWAIN_EnumPatchPriorities(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPatchPriorities';
  function DTWAIN_EnumPatchSearchModes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPatchSearchModes';
  function DTWAIN_EnumPatchTimeOutValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPatchTimeOutValues';
  function DTWAIN_EnumPixelTypes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPixelTypes';
  function DTWAIN_EnumPrinterStringModes(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumPrinterStringModes';
  function DTWAIN_EnumResolutionValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY;bExpandIfRange:DTWAIN_BOOL):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumResolutionValues';
  function DTWAIN_EnumSourceUnits(Source:DTWAIN_SOURCE;lpArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumSourceUnits';
  function DTWAIN_EnumSources(lpArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumSources';
  function DTWAIN_EnumSupportedCaps(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumSupportedCaps';
  function DTWAIN_EnumSupportedCapsEx(Source:DTWAIN_SOURCE;MaxCustomBase:DWORD;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumSupportedCapsEx';
  function DTWAIN_EnumThresholdValues(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY;bExpandIfRange:DTWAIN_BOOL):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumThresholdValues';
  function DTWAIN_EnumTopCameras(Source:DTWAIN_SOURCE;Cameras:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumTopCameras';
  function DTWAIN_EnumTwainPrinters(Source:DTWAIN_SOURCE;lpAvailPrinters:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumTwainPrinters';
  function DTWAIN_EnumTwainPrintersArray(Source:DTWAIN_SOURCE;pArray:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_EnumTwainPrintersArray';
  function DTWAIN_ExecuteOCR(Engine:DTWAIN_OCRENGINE;szFileName:LPCWSTR;nStartPage:DWORD;nEndPage:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ExecuteOCR';
  function DTWAIN_ExecuteOCRA(Engine:DTWAIN_OCRENGINE;szFileName:PAnsiChar;nStartPage:DWORD;nEndPage:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ExecuteOCRA';
  function DTWAIN_ExecuteOCRW(Engine:DTWAIN_OCRENGINE;szFileName:PWideChar;nStartPage:DWORD;nEndPage:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ExecuteOCRW';
  function DTWAIN_FeedPage(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FeedPage';
  function DTWAIN_FlipBitmap(hDib:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FlipBitmap';
  function DTWAIN_FlushAcquiredPages(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FlushAcquiredPages';
  function DTWAIN_ForceAcquireBitDepth(Source:DTWAIN_SOURCE;BitDepth:DWORD):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_ForceAcquireBitDepth';
  function DTWAIN_FrameCreate(Left:DTWAIN_FLOAT;Top:DTWAIN_FLOAT;Right:DTWAIN_FLOAT;Bottom:DTWAIN_FLOAT):DTWAIN_FRAME;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameCreate';
  function DTWAIN_FrameCreateString(Left:LPCWSTR;Top:LPCWSTR;Right:LPCWSTR;Bottom:LPCWSTR):DTWAIN_FRAME;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameCreateString';
  function DTWAIN_FrameDestroy(Frame:DTWAIN_FRAME):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameDestroy';
  function DTWAIN_FrameGetAll(Frame:DTWAIN_FRAME;var Left:DTWAIN_FLOAT;var Top:DTWAIN_FLOAT;var Right:DTWAIN_FLOAT;var Bottom:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameGetAll';
  function DTWAIN_FrameGetAllString(Frame:DTWAIN_FRAME;Left:LPWSTR;Top:LPWSTR;Right:LPWSTR;Bottom:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameGetAllString';
  function DTWAIN_FrameGetValue(Frame:DTWAIN_FRAME;nWhich:DWORD;var Value:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameGetValue';
  function DTWAIN_FrameGetValueString(Frame:DTWAIN_FRAME;nWhich:DWORD;Value:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameGetValueString';
  function DTWAIN_FrameIsValid(Frame:DTWAIN_FRAME):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameIsValid';
  function DTWAIN_FrameSetAll(Frame:DTWAIN_FRAME;Left:DTWAIN_FLOAT;Top:DTWAIN_FLOAT;Right:DTWAIN_FLOAT;Bottom:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameSetAll';
  function DTWAIN_FrameSetAllString(Frame:DTWAIN_FRAME;Left:LPCWSTR;Top:LPCWSTR;Right:LPCWSTR;Bottom:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameSetAllString';
  function DTWAIN_FrameSetValue(Frame:DTWAIN_FRAME;nWhich:DWORD;Value:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameSetValue';
  function DTWAIN_FrameSetValueString(Frame:DTWAIN_FRAME;nWhich:DWORD;Value:LPCWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FrameSetValueString';
  function DTWAIN_FreeExtImageInfo(Source:DTWAIN_SOURCE):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_FreeExtImageInfo';
  function DTWAIN_GetAcquireArea(Source:DTWAIN_SOURCE;lGetType:DWORD;FloatEnum:LPDTWAIN_ARRAY):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireArea';
  function DTWAIN_GetAcquireArea2(Source:DTWAIN_SOURCE;var left:DTWAIN_FLOAT;var top:DTWAIN_FLOAT;var right:DTWAIN_FLOAT;var bottom:DTWAIN_FLOAT;lpUnit:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireArea2';
  function DTWAIN_GetAcquireArea2String(Source:DTWAIN_SOURCE;left:LPWSTR;top:LPWSTR;right:LPWSTR;bottom:LPWSTR;lpUnit:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireArea2String';
  function DTWAIN_GetAcquireArea2StringA(Source:DTWAIN_SOURCE;left:PAnsiChar;top:PAnsiChar;right:PAnsiChar;bottom:PAnsiChar;lpUnit:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireArea2StringA';
  function DTWAIN_GetAcquireArea2StringW(Source:DTWAIN_SOURCE;left:PWideChar;top:PWideChar;right:PWideChar;bottom:PWideChar;lpUnit:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireArea2StringW';
  function DTWAIN_GetAcquireStripBuffer(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireStripBuffer';
  function DTWAIN_GetAcquireStripData(Source:DTWAIN_SOURCE;lpCompression:LPLONG;lpBytesPerRow:LPLONG;lpColumns:LPLONG;lpRows:LPLONG;XOffset:LPLONG;YOffset:LPLONG;lpBytesWritten:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireStripData';
  function DTWAIN_GetAcquireStripSizes(Source:DTWAIN_SOURCE;lpMin:LPLONG;lpMax:LPLONG;lpPreferred:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquireStripSizes';
  function DTWAIN_GetAcquiredImage(aAcq:DTWAIN_ARRAY;nWhichAcq:DWORD;nWhichDib:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquiredImage';
  function DTWAIN_GetAcquiredImageArray(aAcq:DTWAIN_ARRAY;nWhichAcq:DWORD):DTWAIN_ARRAY;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAcquiredImageArray';
  function DTWAIN_GetAlarmVolume(Source:DTWAIN_SOURCE;lpVolume:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAlarmVolume';
  function DTWAIN_GetAppInfo(szVerStr:LPWSTR;szManu:LPWSTR;szProdFam:LPWSTR;szProdName:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAppInfo';
  function DTWAIN_GetAppInfoA(szVerStr:PAnsiChar;szManu:PAnsiChar;szProdFam:PAnsiChar;szProdName:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAppInfoA';
  function DTWAIN_GetAppInfoW(szVerStr:PWideChar;szManu:PWideChar;szProdFam:PWideChar;szProdName:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAppInfoW';
  function DTWAIN_GetAuthor(Source:DTWAIN_SOURCE;szAuthor:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAuthor';
  function DTWAIN_GetAuthorA(Source:DTWAIN_SOURCE;szAuthor:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAuthorA';
  function DTWAIN_GetAuthorW(Source:DTWAIN_SOURCE;szAuthor:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetAuthorW';
  function DTWAIN_GetBatteryMinutes(Source:DTWAIN_SOURCE;lpMinutes:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBatteryMinutes';
  function DTWAIN_GetBatteryPercent(Source:DTWAIN_SOURCE;lpPercent:LPLONG):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBatteryPercent';
  function DTWAIN_GetBitDepth(Source:DTWAIN_SOURCE;BitDepth:LPLONG;bCurrent:DTWAIN_BOOL):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBitDepth';
  function DTWAIN_GetBlankPageAutoDetection(Source:DTWAIN_SOURCE):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBlankPageAutoDetection';
  function DTWAIN_GetBrightness(Source:DTWAIN_SOURCE;var Brightness:DTWAIN_FLOAT):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBrightness';
  function DTWAIN_GetBrightnessString(Source:DTWAIN_SOURCE;Brightness:LPWSTR):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBrightnessString';
  function DTWAIN_GetBrightnessStringA(Source:DTWAIN_SOURCE;Contrast:PAnsiChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBrightnessStringA';
  function DTWAIN_GetBrightnessStringW(Source:DTWAIN_SOURCE;Contrast:PWideChar):DTWAIN_BOOL;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetBrightnessStringW';
  function DTWAIN_GetCallback64:DTWAIN_CALLBACK_PROC64; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetCallback64';
  function DTWAIN_GetCallback:DTWAIN_CALLBACK_PROC; stdcall;
 external 'DTWAIN64U.DLL' name 'DTWAIN_GetCallback';
  function DTWAIN_GetCapArrayType(Source:DTWAIN_SOURCE;nCap:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapArrayType';
  function DTWAIN_GetCapContainer(Source:DTWAIN_SOURCE;nCap:DWORD;lCapType:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapContainer';
  function DTWAIN_GetCapContainerEx(nCap:DWORD;bSetContainer:DTWAIN_BOOL;ConTypes:LPDTWAIN_ARRAY):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapContainerEx';
  function DTWAIN_GetCapDataType(Source:DTWAIN_SOURCE;nCap:DWORD):DWORD;stdcall; external 'DTWAIN64U.DLL' name 'DTWAIN_GetCapDataType';
